# yan-spec

./: .gitignore  LICENSE  README.md  SPEC-ID.md  SPEC.md  index.html
benchmark/: README.md  benchmark.js  fixture.js  package-lock.json  package.json
editors/jetbrains/: README.md
editors/sublime/: Comments.tmPreferences  README.md  YAN.sublime-syntax
editors/vim/ftdetect/: yan.vim
editors/vim/ftplugin/: yan.vim
editors/vim/syntax/: yan.vim
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: yan.tmLanguage.json
editors/vscode/themes/: yan-icon-theme.json
implementations/c/: Makefile  yan
implementations/c/src/: yan.c
implementations/go/: go.mod  yan.go  yan_test.go
implementations/js/: package.json
implementations/js/src/: yan-parser.d.ts  yan-parser.js
implementations/js/test/: test.js
implementations/py/: pyproject.toml
implementations/py/src/yan/: __init__.py  parser.py
implementations/py/test/: test.py
implementations/rust/: Cargo.toml
implementations/rust/src/: lib.rs
tests/: run-all.sh
tests/invalid/: 01_unclosed_string.yan  02_unclosed_block.yan  03_indentation_mixed.yan  04_no_colon.yan  05_empty_key.yan
tests/valid/01_primitive/: 01_string.yan  02_number.json  02_number.yan  03_boolean.json  03_boolean.yan  04_null.json  04_null.yan  05_quoted_string.json  05_quoted_string.yan
tests/valid/02_nested/: 01_block.json  02_deep.yan  03_mixed.json  03_mixed.yan
tests/valid/03_comments/: 01_line.json  01_line.yan  02_block.yan  03_inline.yan
(+30 files in other folders)
