[package]
name = "yan-notation"
version = "1.0.0"
edition = "2021"
authors = ["yan-notation"]
description = "YAN (Yet Another Notation) parser for Rust"
license = "CC0-1.0"
repository = "https://github.com/yan-notation/yan-spec"
keywords = ["yan", "parser", "config", "serialization"]
categories = ["config", "parser-implementations"]

[dependencies]
